--- a/src/_includes/_partials/head.njk
+++ b/src/_includes/_partials/head.njk
@@ -20,7 +20,7 @@
   <meta name="rating" content="general"/>
   <meta name="coverage" content="worldwide"/>
   <meta name="target" content="all"/>
-  <meta name="revisit-after" content="7 days"/>
+  <meta name="revisit-after" content="3 days"/>
 
   <!-- Change the color of the header and address bar -->
   <!-- Chrome, Firefox OS and Opera -->
@@ -38,14 +38,14 @@
   <meta property="og:site_name" content="{{ app.name }}"/>
   <meta property="og:description" content="{{ description }}"/>
   <meta property="og:url" content="{{ page.url | url }}"/>
-  <!-- <meta property="og:image" content="{{ app.image }}"/> -->
+  <meta property="og:image" content="{{ app.url }}/images/baythium-ecosystem.png"/>
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary"/>
   <meta name="twitter:site" content="{{ app.name }}"/>
   <meta name="twitter:title" content="{{ title }}"/>
   <meta name="twitter:description" content="{{ description }}"/>
-  <!-- <meta name="twitter:image" content="{{ app.image }}"/> -->
+  <meta name="twitter:image" content="{{ app.url }}/images/baythium-ecosystem.png"/>
   <meta name="twitter:creator" content="{{ app.company.name }}"/>
   <meta name="twitter:url" content="{{ page.url | url }}"/>
 
