--- a/src/contact.njk
+++ b/src/contact.njk
@@ -5,7 +5,9 @@
   changeFrequency: "yearly",
   priority: 0.5,
   translationKey: "contact",
-  locale: "en"
+  locale: "en",
+  stylesheets: [],
+  javascripts: []
 }
 ---
 
