--- a/src/documentation.njk
+++ b/src/documentation.njk
@@ -5,7 +5,9 @@
   changeFrequency: "weekly",
   priority: 1,
   translationKey: "documentation",
-  locale: "en"
+  locale: "en",
+  stylesheets: [],
+  javascripts: []
 }
 ---
 
