--- a/src/_includes/_partials/app-footer.njk
+++ b/src/_includes/_partials/app-footer.njk
@@ -32,7 +32,7 @@
 
           {# Compare the navigation url and special Eleventy-provided page.url variable to find the current page #}
           <li data-navigation-id="{{ id }}" class="app-footer__navigation-item">
-            <a {% if page.url == url %} class="app-footer__navigation-link app-footer__navigation-link--active" {% else %} class="app-footer__navigation-link" {% endif %} href="{{ url }}">{{ name | title }}</a>
+            <a {% if page.url == url %} class="app-footer__navigation-link app-footer__navigation-link--active" {% else %} class="app-footer__navigation-link" {% endif %} href="{{ url }}">{{ name }}</a>
           </li>
 
         {% if loop.last %}</ul>{% endif %}
@@ -41,7 +41,7 @@
 
     <!-- Deck 3: Brand -->
     <div class="app-footer__brand">
-      <img src="{{ '/' | url }}images/baythium-ecosystem-3.svg" alt="{{ app.company.name }}"/>
+      <img src="{{ '/' | url }}images/baythium-ecosystem-2.svg" alt="{{ app.company.name }}"/>
     </div>
 
     <!-- Deck 4: Copyright -->
