--- a/src/about.njk
+++ b/src/about.njk
@@ -5,7 +5,9 @@
   changeFrequency: "yearly",
   priority: 0.6,
   translationKey: "about",
-  locale: "en"
+  locale: "en",
+  stylesheets: [],
+  javascripts: []
 }
 ---
 
