--- a/src/faq.njk
+++ b/src/faq.njk
@@ -6,7 +6,9 @@
   priority: 0.7,
   translationKey: "faq",
   locale: "en",
-  description: "Find answers to frequently asked questions. See the most common topics and more"
+  description: "Find answers to frequently asked questions. See the most common topics and more",
+  stylesheets: [],
+  javascripts: []
 }
 ---
 
