--- a/src/index.njk
+++ b/src/index.njk
@@ -102,7 +102,7 @@
         <!-- Subdeck 1 -->
         <div class="sm-column-1--4 text-1--center">
           <a href="https://github.com/damien-bayes/baythium-packer_client" target="_blank" rel="noopener noreferrer" class="button-1 button-1--secondary mb-1--2">Join Us On Github<span class="icon icon--external-link"></span></a>
-          <p>Stars: <span id="starsCount">0</span></p>
+          <p class="display-1--none">Stars: <span id="starsCount">0</span></p>
         </div>
 
         <!-- Subdeck 2 -->
