--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -1,6 +1,6 @@
 ---js
 {
-  keywords: "bash, shell, unix, automation, baythium-automation, baythium-ecosystem, archiver, cli, powershell, windows, baythium-family, baythium, baythium-packer"
+  keywords: "business, workflow, archiver, compression, cli, file, folder, gpg, open source, automation, baythium, baythium ecosystem, baythium family, baythium packer"
 }
 ---
 
