--- a/src/styles/custom-baythium-aspectus.scss
+++ b/src/styles/custom-baythium-aspectus.scss
@@ -17,6 +17,9 @@
 @import "components/faq";
 @import "components/pagination";
 
+@import "components/syntax-highlight";
+@import "components/prism";
+
 /* CUSTOM MODIFICATIONS */
 .icon { 
   display: inline-flex;
