--- a/src/_includes/_partials/head.njk
+++ b/src/_includes/_partials/head.njk
@@ -80,6 +80,13 @@
   <!-- <link rel="icon" href="/favicon.ico"/> -->
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
+  {#
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=d73aea1f"/>
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=d73aea1f"/>
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=d73aea1f"/>
+  <link rel="mask-icon" href="/pinned-tab.svg?v=d73aea1f" color="#000000">
+  #}
+
   <link href="/styles/baythium-aspectus.min.css" rel="stylesheet" media="all"/>
   <link href="/styles/baythium-vector.min.css" rel="stylesheet" media="all"/>
 
