--- a/src/_includes/_partials/head.njk
+++ b/src/_includes/_partials/head.njk
@@ -27,6 +27,8 @@
   <meta name="theme-color" content="#ffffff"/>
   <!-- Windows Phone -->
   <meta name="msapplication-navbutton-color" content="#ffffff"/>
+  <meta name="msapplication-TileColor" content="#ffffff"/>
+  <!-- <meta name="msapplication-TileImage" content="/mstile-144x144.png"/> -->
   <!-- iOS Safari -->
   <meta name="apple-mobile-web-app-status-bar-style" content="default"/>
 
