--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -70,6 +70,7 @@
       WARNING: For best practice, establish early connections to important third-party origins
     -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163071822-1"></script>
+    <script async src="//fast.appcues.com/70842.js"></script>
 
     {# CUSTOM IMPORTS #}
     <script src="/js/baythium-aspectus.min.js"></script>
