--- a/src/exceptions/malicious-request.njk
+++ b/src/exceptions/malicious-request.njk
@@ -14,7 +14,7 @@
   Initial author: Damien Bayes <damien.bayes.db@gmail.com>
 #}
 
-<section class="section-1 page-not-found">
+<section class="section-1 malicious-request">
 
   <h1>Malicious Request</h1>
   <p>This request has been blocked by Anti XSS & SQL Injection</p>
