--- a/src/exceptions/malicious-request.njk
+++ b/src/exceptions/malicious-request.njk
@@ -17,7 +17,7 @@
 <section class="section-1 malicious-request">
 
   <h1>Malicious Request</h1>
-  <p>This request has been blocked by Anti XSS & SQL Injection</p>
+  <p>This request has been blocked by Anti XSS and SQL Injection</p>
   
 </section>
 
